build rpc-server module

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <modules>
         <module>rpc-registry</module>
         <module>rpc-common</module>
+        <module>rpc-server</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -25,6 +26,12 @@
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
             <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.6.Final</version>
         </dependency>
     </dependencies>
     <build>
