--- a/rpc-server/pom.xml
+++ b/rpc-server/pom.xml
@@ -29,5 +29,10 @@
             <artifactId>rpc-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.yl</groupId>
+            <artifactId>rpc-registry</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
