--- a/rpc-client/pom.xml
+++ b/rpc-client/pom.xml
@@ -30,6 +30,11 @@
         </dependency>
         <dependency>
             <groupId>com.yl</groupId>
+            <artifactId>rpc-registry</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.yl</groupId>
             <artifactId>rpc-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
